--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -142,4 +142,8 @@
       width: 250px;
       overflow: hidden;
     }
+    .accordion{
+      width: 200px;
+      text-align: center;
+    }
   }
