--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,22 +1,18 @@
-.single-product-images{
-    position: relative;
+.faq h3{
+    font-family: hind-semi;
 }
-.single-product-images .discount-tag{
-    position: absolute;
-    right: 20px;
-    height: 30px;
-    padding-top: 5px;
-    font-size: 16px;
+.contact-form h3{
+    font-family: hind-semi;
 }
-.tab-box, .dec-acc{
-    border-top: 1px solid gray;
+.dec-acc .accordion{
+    border-top: 1px solid rgba(128, 128, 128, 0.404);
 }
 .accordion{
     position: relative;
 }
 .accordion .ac-btn {
   
-    text-transform: uppercase;
+    text-transform: capitalize;
     text-decoration: none;
     letter-spacing: 0.15em;
     
@@ -35,11 +31,11 @@
     height: 2px;
     left: 50%;
     position: absolute;
-    background: #FF7400;
+    background: transparent;
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
   }
-  .accordion .ac-btn:hover:after { 
+.accordion .ac-btn:hover:after { 
     width: 100%; 
     left: 0; 
   }
@@ -62,12 +58,22 @@
     position: relative;
 
   }
-  
-  @media (max-width: 571px){
-    .products-options a{
-      display: block;
-      padding: 10px;
-    }
 
+  input.form-control{
+    box-shadow: none;
+    outline: none;
+    border-radius: 0;
   }
 
+  input.form-control:focus{
+    box-shadow: none;
+    outline: none;
+    border-radius: 0;
+  }
+
+  .contact-form form .btn{
+    border-radius: 0;
+    background-color: rgb(230, 230, 230);
+    color: black;
+    border: 0;
+  }
