--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -7,6 +7,7 @@
     height: 30px;
     padding-top: 5px;
     font-size: 16px;
+    top: 20px;
 }
 .tab-box, .dec-acc{
     border-top: 1px solid gray;
@@ -63,11 +64,18 @@
 
   }
   
+  
   @media (max-width: 571px){
     .products-options a{
       display: block;
       padding: 10px;
     }
+    .product-details-row .row>*{
+      padding-right: 0;
+    }
 
   }
 
+  .product .images{
+    position: relative;
+  }
